add page team and single-team

--- a/wp-content/themes/fin-law/blocks/main-news/style.css
+++ b/wp-content/themes/fin-law/blocks/main-news/style.css
@@ -1,3 +1,7 @@
+.main-news-section {
+  padding-top: var(--fluid-64-120);
+}
+
 .main-news-content {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
