--- a/wp-content/themes/fin-law/blocks/main-accordion/style.css
+++ b/wp-content/themes/fin-law/blocks/main-accordion/style.css
@@ -100,3 +100,10 @@
   content: '';
   background-color: #A7D7B0;
 }
+
+@media screen and (width <= 640px) {
+  .main-accordion-control {
+    flex-direction: column;
+    row-gap: 32px;
+  }
+}
